[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
advent_of_code = { path = "C:\\Users\\evand\\Documents\\Rust\\advent_of_code\\advent_of_code" }
itertools = '0.10.5'